etc/tests/error/type/list-index-non-int.ny
;; expect: cannot assign string literal to int
use std.core

def xs = [1, 2, 3]
print(xs["x"])
